Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -164,7 +164,7 @@ Implementing these parameter combinations in the silicate weathering component o
 
 We use geological data to quantify the changes in the area of I\&NG over the past 20~m.y. (Fig. \ref{fig:shoreline_growth}). Following \citet{Molnar2015a}, we analyzed the area changes of islands that are greater than $\sim$200~km$^{2}$, and we also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Terrestrial and marine sedimentary deposits were used to determine the position of paleoshorelines (details in SI). 
 
-In New Guinea, emergence in the Middle Miocene is associated with the collision between the Melanesian Arc and the distal margin of Australia \citep{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove the exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. which has been intrepreted to be associated with slab-breakoff and buoyant uplift \citep{Cloos2005a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has also caused major uplift over the past 4~m.y. \citep{vanUfford2005a}, which is well dated with a change in provenance from continental to volcanic detritus \citep{Abbott1994a} and thermochronology \citep{Hill1989a}. Most of the non-volcanic islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \citep{Harris2006a, Hall2013a}. In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations \textgreater1~km above sea level with estimated average uplift rates of 1.5~km/m.y. \citep{AudleyCharles1986a}. These drivers lead to progressive emergence, as seen in the paleoshoreline reconstructions, over the past 15 million years that accelerated following 5 Ma (Fig. \ref{fig:shoreline_growth}.
+In New Guinea, emergence in the Middle Miocene is associated with the collision between the Melanesian Arc and the distal margin of Australia \citep{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove the exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. which has been intrepreted to be associated with slab-breakoff and buoyant uplift \citep{Cloos2005a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has also caused major uplift over the past 4~m.y. \citep{vanUfford2005a}, which is well dated with a change in provenance from continental to volcanic detritus \citep{Abbott1994a} and thermochronology \citep{Hill1989a}. Most of the non-volcanic islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \citep{Harris2006a, Hall2013b}. In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations \textgreater1~km above sea level with estimated average uplift rates of 1.5~km/m.y. \citep{AudleyCharles1986a}. These drivers lead to progressive emergence, as seen in the paleoshoreline reconstructions, over the past 15 million years that accelerated following 5 Ma (Fig. \ref{fig:shoreline_growth}.
 
 Along with the Neogene increase in subaerially-exposed land area and tectonic topography associated with arc-continent collision, there has also been a decrease in subaerially-exposed land area on the Sunda Shelf \citep{Sarr2019a}. Large portions of this low-relief area of continental crust were likely emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Hall2002a}, potentially driving climate amplification on orbital timescales \citep{DiNezio2018a}. Similarities in terrestrial biotas of Borneo and mainland Southeast Asia suggest the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. During the Eocene through early Miocene, the rifting of the South China Sea resulted in subsidence of the Sunda Shelf \citep{Morley2013a} and recent subsidence is interpreted to be a result of dynamic topography, triggered by subduction-related mantle flow \citep{Sarr2019a}. In the Miocene, this region exposed a mixture of felsic basement rocks and siliciclastic sediments \citet{Darmadi2007a}. The relatively low-relief and felsic lithologies of the region contrasts with the high-relief and mafic lithologies of most of I\&NG.
 
