--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -280,7 +280,7 @@ $M_{i}$ is the modeled \COtwo consumption over watershed $i$, $O_{i}$ is the obs
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/W_vs_r2.pdf}
-    \caption{\textbf{A)} Modeled global \COtwo consumption vs. the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of the watersheds. Each point represents model output using one of the 78,000 parameter combinations. \textbf{B)} Same as A, but zoomed to the plotting space with positive $r^{2}$'s.}
+    \caption{\textbf{A)} Modeled global \COtwo consumption vs. the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of the watersheds. Each point represents model output using one of the 78,000 parameter combinations. \textbf{B)} Same as A, but zoomed to the plotting space with positive $r^{2}$'s. The black line represents the full range of estimates of the present-day global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a}. The black box represents the preferred range of those estimates.}
     \label{fig:W_vs_r2}
 \end{figure}
 
@@ -291,26 +291,30 @@ $M_{i}$ is the modeled \COtwo consumption over watershed $i$, $O_{i}$ is the obs
     \label{fig:r2_cross_plot}
 \end{figure}
 
-The majority of the original 78,000 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}\textless0.4$, which leaves 3,339 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}). We note that these 3,339 combinations also all produce total global \COtwo consumption estimates that fall within the range of those estimated in the literature for the present-day. However, this is an expected outcome, given that total global \COtwo consumption is often estimated in the literature using the same measured watershed \COtwo consumption that we compare to.
+The majority of the original 78,000 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}\textless0.4$, which leaves 3,339 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
+
+In our implementation, the mean global CO$_{2}$ consumption calculated from these 3,339 parameter combinations is 5.4$\times10^{12}$~mol/yr, with a standard deviation of 0.9$\times10^{12}$~mol/yr. These estimates fall within the range of those independently estimated in the literature for the present-day: the full range of estimates of the present-day global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a} is 3.0--10.0$\times10^{12}$~mol/yr, with the preferred range of those estimates being 3.4--5.9$\times10^{12}$~mol/yr (Fig. \ref{fig:W_vs_r2}B).
 
 \section*{Climate Model}
 
-We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments \citep{Delworth2006a, Delworth2006b} for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at a 1\degrees $\times$ 1\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively.
+We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at a 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively.
 
 \section*{Indonesia and New Guinea Scenarios}
 
-% explanation of construction of lith maps: Sunda Shelf scenario also needs explanation of construction of runoff and slope fields.
-
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\textwidth]{Manuscript/Figures/ING_fracs.jpg}
+    \includegraphics[width=1\textwidth]{Manuscript/Figures/ING_fracs.jpg}
     \caption{0.5\degrees $\times$ 0.5\degrees lithologic maps of Indonesia and New Guinea (I\&NG) used to force GEOCLIM. Each column represents a tested scenario. Each row represents a lithologic category. Solid black lines show present-day shorelines.}
     \label{fig:ING_fracs}
 \end{figure}
 
+We use geological data to quantify the changes in the area of I\&NG over the past 20~m.y (described in detail in \textit{Paleoshorelines}). To generate the lithologic map used in the ``removed I\&NG'' scenario (Fig. \ref{fig:ING_fracs}), we remove all land associated with arc-continent collision in I\&NG. To generate the lithologic map used in the ``reduced I\&NG'' scenario (Fig. \ref{fig:ING_fracs}), we take the estimated paleoshorelines of I\&NG for 15~Ma, then remove all land that falls outside of these bounds. For this scenario, we do not add any land (i.e. the Sunda Shelf) that is not exposed today to the lithologic map, and the slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of I\&NG for 15~Ma.
+
+The lithologic map used in the ``reduced I\&NG + Sunda Shelf'' scenario (Fig. \ref{fig:ING_fracs}) is identical to that used in the ``reduced I\&NG'' scenario, with the addition of the Sunda Shelf. However, the assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshorelines}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Basement highs between Malaysia/Sumatra and Borneo are typically granitic and bounded by basins dominated by shallow marine clastic fill. However, basement highs are less common in the Gulf of Thailand. We therefore assign all pixels of the Sunda Shelf to be 50\% felsic and 50\% sediment, except in the Gulf of Thailand where pixels are assigned to be 100\% sediment. For the slope, we take the mean slope value (0.0038~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf.  For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, but it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation.
+
 \section*{Paleoshorelines}
 
-Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in I\&NG. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$. We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma) and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries, i.e. Early Miocene = 23-16 Ma, Middle Miocene = 15.99-11.61 Ma, Late Miocene = 11.6-5.4 Ma, Pliocene =5.39-3.8 Ma, but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
+Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in I\&NG. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$. We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries, i.e. Early Miocene = 23-16 Ma, Middle Miocene = 15.99-11.61 Ma, Late Miocene = 11.6-5.4 Ma, Pliocene =5.39-3.8 Ma, but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
 
 Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a} and \citet{Hall2018a}, and in New Guinea, we followed \citet{Gold2017a} and \cite{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5 Ma by \citet{Molnar2015a} our calculated area is comparable (Fig. 1). 
 
@@ -321,6 +325,7 @@ Paleogeographic reconstructions of Peninsular Malaysia suggest that it has been 
 \subsection*{Borneo and Palawan}
 
 Our reconstructions of the paleoshorelines of Borneo and Palawan are largely informed by extant paleogeographic constructions detailed in Hall (2001, 2013a, b),  as well as geologic maps and local shoreline reconstructions found in van de Weerd and Armin (1992), Witts et al. (2012), Madon et al. (2013), and Kessler and Jong (2015). Comprised of Paleozoic to Mesozoic crustal components that were largely accreted to Sundaland by the late Cretaceous (Metcalfe, 2013), the southern and western portions of Borneo (SW Kalimantan) have been subaerially exposed throughout the Neogene (Hall, 2013a, b). A collision along the northern margin of Borneo associated with the initiation of rifting in the South China Sea resulted in the late Eocene uplift of the Central Range mountains (Hutchison, 1996), which provide sediment to basins along the Southern (Kalimantan) and northern (Sabah and Sarawak) coasts of the island. In the east, the Barito, Kutei, and Tarakan basins developed as a single area of subsidence (associated with the opening of the Makassar Straits in the Eocene) before the basins were isolated by Oligocene faulting and Miocene uplift (Witts et al., 2012). The Kutei Basin is characterized by eastward-prograding deltaic and shallow shelf deposits that have been steadily supplied with sediment from the Schwaner Mountains of SW Kalimantan and the Central Range (van de Weerd and Armin, 1992). North of the Kutei Basin, the deltaic deposits found in the Tarakan Basin similarly prograde eastward from the mid Miocene onward, fed by the northern drainages of the Central Range (Satyana et al., 1999). In SE Kalimantan, the Barito Basin is bounded to the east by the ophiolite-bearing Meratus Mountains. Sedimentological data suggests that the Meratus Mountains were not emergent until the Late Miocene (Witts et al., 2012).
+
 Separated from the Paleozoic continental core of SW Borneo by the Lupar Line suture zone, the northern portion of Borneo (Sabah) is underlain by ophiolitic basement that extends to Palawan (Hall et al., 2008; Ilao et al., 2018). The Sarawak Basin and NW Borneo trough offshore Sabah host >10 km-thick Neogene sediementary sequences, indicative of the extent and duration of exhumation in northern Borneo (Hall et al., 2008). The Late Oligocene/Early Miocene Sabah Orogeny resulted in the uplift of both Sabah and southern Palawan (Hall, 2013a), as well as the obduction of the Palawan ophiolite and Telupid ophiolite of northern Sabah. Under-thrusting of thinned passive-margin continental crust beneath these suprasubduction ophiolites resulted in Early to Middle Miocene exhumation and offshore unconformities (Hall et al., 2008). Early Miocene sediments in northern Sabah have a provenance from Palawan (Suggate et al., 2014), indicating that Palawan, like northern Borneo, experienced uplift during the Sabah orogeny. However, initiation of back-arc extension in the Sulu Sea around 19 Ma (Hall, 2013a) resulted in the subsidence of the eastern Palawan Mountains, eliminating or reducing the role of Palawan as a sediment source for the Borneo trough. The 14 Ma Capoas Granite on Palawan and the 7.5 Ma Kinabalu Granite in Sabah are the products of crustal thinning related to pulses of regional backarc extension (Hall, 2013a). Thermochronological data from the Sabah highlands suggest extremely rapid uplift (7km/Myr) and exhumation during the latest Miocene and early Pliocene, resulting in the recent formation of Mt. Kinabalu, the tallest peak in Borneo (Cottam et al., 2013).
 
 \subsection*{Sulawesi}
@@ -359,7 +364,7 @@ Paleoshoreline reconstructions of the Sunda-Banda Arc system relied largely on t
 
 Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the subducting Australian Plate (Harris, 2006). From ~20-10 Ma, the majority of Sumatra and nearly all of Java were submerged, although Bangka and Belitung were exposed in addition to a portion of the greater Sunda Shelf, which was at least partially exposed throughout the past 20 Ma (Hall, 2009, 2013b). Six major islands were subaerially exposed before 5 Ma: Sumatra, Belitung, Bangka, Java, Bali, and Flores. However, most of Sumatra and Java were elevated above sea level and emerged to their present exposures only since 5 Ma (Hall, 2009, 2013b). Most of the non-volcanic islands of the Outer Banda Arc emerged after 5 Ma, associated with slab roll-back and collision with the Australian continental margin (Audley-Charles, 2004; Hall, 2013b; Harris, 2006). In Timor and Sumba arc-continent collision resulted in rapid uplift of deep marine sedimentary rocks to elevations >1 km above sea level with estimated average uplift rates of 1.5 km/Myr (Audley-Charles, 1986).
 
-\section*{Limitations and future directions}
+\section*{Limitations and Future Directions}
 
 As with any modeling study, there are limitations with the approach. We consider one of the current limitations to be the climate model component of GEOCLIM that was used in this study (GFDL CM2.0) has a lower spatial resolution (2.0\degrees $\times$ 2.5\degrees) than what can be achieved with the latest climate models and computational resources. Using an updated climate model at higher resolution may result in runoff and temperature fields with different spatial distribution and sensitivities to elevation. 
 
