--- a/Manuscript/Supplementary_Information/References.bib
+++ b/Manuscript/Supplementary_Information/References.bib
@@ -1,12 +1,37 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Yuem Park at 2019-09-10 17:08:56 -0700 
+%% Created for Yuem Park at 2019-09-11 17:26:18 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Lague2013a,
+	Author = {Lague, Dimitri},
+	Date-Added = {2019-09-11 17:26:03 -0700},
+	Date-Modified = {2019-09-11 17:26:17 -0700},
+	Doi = {10.1002/esp.3462},
+	Issn = {0197-9337},
+	Journal = {Earth Surface Processes and Landforms},
+	Month = {Nov},
+	Number = {1},
+	Pages = {38-61},
+	Publisher = {Wiley},
+	Title = {The stream power river incision model: evidence, theory and beyond},
+	Url = {http://dx.doi.org/10.1002/esp.3462},
+	Volume = {39},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1002/esp.3462}}
+
+@techreport{GeologicalSurveyDivision1963a,
+	Author = {{Geologic Survey Division}},
+	Date-Added = {2019-09-11 17:22:40 -0700},
+	Date-Modified = {2019-09-11 17:25:09 -0700},
+	Institution = {Bureau of Mines, in coordination with the Board of Technical Surveys and Maps},
+	Title = {Geological map of the {P}hilippines},
+	Year = {1963}}
 
 @article{Yumul2013a,
 	Author = {Yumul, Graciano P. and Dimalanta, Carla B. and Tamayo, Rodolfo A. and Faustino-Eslava, Decibel V.},
